--- a/travel-project/src/components/RegionCard.css
+++ b/travel-project/src/components/RegionCard.css
@@ -3,63 +3,63 @@
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 100;
-  src: url('../../assets/fonts/NotoSansKR-Thin.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-Thin.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 200;
-  src: url('../../assets/fonts/NotoSansKR-ExtraLight.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-ExtraLight.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 300;
-  src: url('../../assets/fonts/NotoSansKR-Light.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-Light.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 400;
-  src: url('../../assets/fonts/NotoSansKR-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 500;
-  src: url('../../assets/fonts/NotoSansKR-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-Medium.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 600;
-  src: url('../../assets/fonts/NotoSansKR-SemiBold.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 700;
-  src: url('../../assets/fonts/NotoSansKR-Bold.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-Bold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 800;
-  src: url('../../assets/fonts/NotoSansKR-ExtraBold.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-ExtraBold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 900;
-  src: url('../../assets/fonts/NotoSansKR-Black.ttf') format('truetype');
+  src: url('../assets/fonts/NotoSansKR-Black.ttf') format('truetype');
 }
 
 * {
