--- a/travel-project/src/components/RegionCard.css
+++ b/travel-project/src/components/RegionCard.css
@@ -1,67 +1,4 @@
 /* 모든 요소에 Noto Sans Korean 적용 */
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 100;
-  src: url('../assets/fonts/NotoSansKR-Thin.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 200;
-  src: url('../assets/fonts/NotoSansKR-ExtraLight.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 300;
-  src: url('../assets/fonts/NotoSansKR-Light.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../assets/fonts/NotoSansKR-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../assets/fonts/NotoSansKR-Medium.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../assets/fonts/NotoSansKR-SemiBold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../assets/fonts/NotoSansKR-Bold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 800;
-  src: url('../assets/fonts/NotoSansKR-ExtraBold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 900;
-  src: url('../assets/fonts/NotoSansKR-Black.ttf') format('truetype');
-}
-
 * {
   font-family: 'Noto Sans KR', sans-serif;
 }
@@ -121,10 +58,10 @@
 }
 
 .region-description {
-  color: #9f9f9f;
+  color: #6b6b6b;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 12px;
-  font-weight: 100;
+  font-weight: 400;
   left: 9px;
   letter-spacing: 0;
   line-height: 16.8px;
@@ -149,10 +86,10 @@
 }
 
 .region-tag {
-  color: #333333;
+  color: #6b6b6b;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 10px;
-  font-weight: 100;
+  font-weight: 400;
   letter-spacing: 0;
   line-height: 14.0px;
   position: absolute;
