--- a/travel-project/src/components/Navbar.css
+++ b/travel-project/src/components/Navbar.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #ddd;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .navbar-left {
