fix: navbar css 수정

--- a/travel-project/src/components/Navbar.css
+++ b/travel-project/src/components/Navbar.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ddd;
+    font-family: 'Noto Sans KR', sans-serif;
   }
   
   .navbar-left {
@@ -12,11 +13,6 @@
     align-items: center;
   }
   
-  .navbar-logo {
-    font-size: 20px;
-    font-weight: bold;
-    color: #4F9DDE; /* 메인 컬러 */
-  }
   
   .navbar-right {
     display: flex;
@@ -27,7 +23,7 @@
   .navbar-right a {
     text-decoration: none;
     color: #333;
-    font-size: 16px;
+    font-size: 24px;
     transition: all 0.3s ease;
   }
   
@@ -42,7 +38,7 @@
     pointer-events: none;
   }
   .navbar-logo {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
     color: #4F9DDE;
     text-decoration: none;
