--- a/travel-project/src/pages/PlanPage/PlanPage.css
+++ b/travel-project/src/pages/PlanPage/PlanPage.css
@@ -51,8 +51,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(255, 255, 255, 0.5);
   /* 흐릿한 하얀색 반투명 */
   backdrop-filter: blur(5px);
@@ -66,11 +66,41 @@
 /* 모달 박스 */
 .modal-wrapper {
   background: white;
+  padding: 32px 50px;
   border-radius: 10px;
   /* 라운드 10px */
   border: 1px solid #ccc;
   /* 연한 회색 테두리 */
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  /* 모서리 둥글게 깔끔하게 유지 */
+}
+
+.modal-wrapper p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 8px;
+}
+
+.modal-buttons button {
+  font-size: 14px;
+  font-weight: 500;
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 8px 16px;
+}
+
+.modal-buttons button:first-child {
+  color: #666; /* 닫기 버튼 */
+}
+
+.modal-buttons button:last-child {
+  color: #4F9DDE; /* 확인 버튼 */
 }
