--- a/travel-project/src/pages/PlanPage/PlanPage.css
+++ b/travel-project/src/pages/PlanPage/PlanPage.css
@@ -17,7 +17,8 @@
 
 .plan-title {
   font-size: 20px;
-  font-weight: 500; /* Noto Sans Medium */
+  font-weight: 500;
+  /* Noto Sans Medium */
   margin-bottom: 4px;
 }
 
@@ -73,13 +74,14 @@
   /* 연한 회색 테두리 */
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  position: relative;
 }
 
 .modal-wrapper p {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.6;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 }
 
 .modal-buttons {
@@ -98,9 +100,11 @@
 }
 
 .modal-buttons button:first-child {
-  color: #666; /* 닫기 버튼 */
+  color: #666;
+  /* 닫기 버튼 */
 }
 
 .modal-buttons button:last-child {
-  color: #4F9DDE; /* 확인 버튼 */
+  color: #4F9DDE;
+  /* 확인 버튼 */
 }
