--- a/travel-project/src/pages/PlanPage/PlanPage.css
+++ b/travel-project/src/pages/PlanPage/PlanPage.css
@@ -75,6 +75,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   position: relative;
+  text-align: center;
 }
 
 .modal-wrapper p {
