--- a/travel-project/src/pages/ReviewPage/ReviewWrite.css
+++ b/travel-project/src/pages/ReviewPage/ReviewWrite.css
@@ -85,6 +85,24 @@
   margin-left: 8px;
   font-size: 1rem;
 }
+.date-inputs {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.date-input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+.location-input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 100%;
+}
 .review-content-input {
   width: 100%;
   min-height: 120px;
@@ -120,7 +138,7 @@
 
 .review-card {
   width: 250px;
-  height: 500px;
+  height: 380px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
