style #37 : 리뷰페이지 modal css 수정 및 적용

--- a/travel-project/src/pages/ReviewPage/ReviewDetailModal.css
+++ b/travel-project/src/pages/ReviewPage/ReviewDetailModal.css
@@ -46,7 +46,7 @@
   object-fit: cover;
   border-radius: 8px;
 }
-.modal-content {
+.review-modal-content {
   width: 100%;
   display: flex;
   flex-direction: column;
