--- a/travel-project/src/pages/ReviewPage/ReviewList.css
+++ b/travel-project/src/pages/ReviewPage/ReviewList.css
@@ -11,7 +11,7 @@
   justify-items: center;
 }
 .write-btn {
-  background: #1976d2;
+  background: #4F9DDE;
   color: #fff;
   border: none;
   border-radius: 4px;
