fix #53 : navbar : 오른쪽 padding, 메인카드 왼쪽 정렬, 카드 사이 padding, Tag 검색후 데이터 없을 시 문구 추가

--- a/travel-project/src/category/Navbar.css
+++ b/travel-project/src/category/Navbar.css
@@ -22,9 +22,10 @@
 
 .navbar-right {
   display: flex;
-  gap: 40px;
+  gap: 50px;
   align-items: center;
   font-family: "Noto Sans", sans-serif;
+  padding-right: 15px
 }
 
 .navbar-right a {
