--- a/travel-project/src/components/RegionCardList.css
+++ b/travel-project/src/components/RegionCardList.css
@@ -1,15 +1,65 @@
+.card-list-wrapper {
+  width: 1300px; /* 카드 5개 x 227px + gap 고려 */
+  margin: 40px auto 0; /* 상단 여백 + 가운데 정렬 */
+  padding: 0 10px; /* 좌우 내부 여백 */
+  justify-content: center;
+}
+
 .card-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; /* 카드 왼쪽 정렬 */
+  gap: 40px; /* 카드 간 간격 */
+  margin-top: 0px;
+}
+
+.center-text {
+  text-align: center;
+  margin-top: 80px;
+  font-size: 1.8rem;
+  color: #555;
+}
+
+.no-results-text {
+  margin-top: 40px;
+  text-align: center;
+  font-size: 1.2rem;
+  color: #888;
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 0.3s ease;
+}
+
+
+.card {
+  flex: 1 1 calc(20% - 40px); /* 5개씩 보이게 */
+  max-width: 220px;
+  min-width: 160px;
+}
+
+/*반응형 화면*/
+@media (max-width: 1100px) {
+  .card {
+    flex: 1 1 calc(25% - 40px); /* 4개 */
   }
-  
-  .center-text {
-    text-align: center;
-    margin-top: 80px;
-    font-size: 1.8rem;
-    color: #555;
+}
+
+@media (max-width: 900px) {
+  .card {
+    flex: 1 1 calc(33.33% - 40px); /* 3개 */
   }
-  
+}
+
+@media (max-width: 700px) {
+  .card {
+    flex: 1 1 calc(50% - 40px); /* 2개 */
+  }
+}
+
+@media (max-width: 500px) {
+  .card {
+    flex: 1 1 100%; /* 1개씩 */
+  }
+}
+
