--- a/travel-project/src/pages/ReviewPage/ReviewDetailModal.css
+++ b/travel-project/src/pages/ReviewPage/ReviewDetailModal.css
@@ -14,8 +14,8 @@
   border-radius: 12px;
   box-shadow: 0 4px 24px rgba(0,0,0,0.18);
   padding: 39px 32px 80px 32px;
-  width: 600px;
-  height: 650px;
+  width: 570px;
+  height: 580px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,35 +56,42 @@
   width: 100%;
   height: 100%;
   border-radius: 8px;
+  object-fit: contain;
+  background: #eee;
 }
 .review-modal-content {
   display: flex;
   flex-direction: column;
   margin-bottom: 12px;
+  align-items: center;
 }
-.modal-header {
+.review-modal-header {
   width: 100%;
   padding-bottom: 16px;
   border-bottom: 1px solid #eee;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  text-align: center;
+  gap: 0;
 }
 .modal-rating {
-  font-size: 1.7rem;
-  margin-bottom: 4px;
-  display: flex;
-  align-items: center;
-  gap: 2px;
+  justify-self: center;
 }
 .modal-location {
-  font-size: 1.1rem;
+  justify-self: center;
+  font-size: 20px;
+  font-weight: 600;
   color: #444;
 }
 .modal-date {
-  font-size: 0.95rem;
+  justify-self: start;
+  font-size: 16px;
   color: #888;
 }
 .modal-text-container {
-  width: 565px;
-  height: 196px;
+  width: 560px;
+  height: 150px;
   margin-top: 16px;
   padding: 16px;
   border-radius: 8px;
@@ -106,7 +113,7 @@
   background: #555;
 }
 .modal-text {
-  font-size: 1.1rem;
+  font-size: 18px;
   color: #222;
   word-break: break-all;
   line-height: 1.5;
@@ -147,7 +154,7 @@
   position: absolute;
   right: 32px;
   bottom: 24px;
-  background: #2196f3;
+  background: #4F9DDE;
   color: #fff;
   border: none;
   border-radius: 6px;
@@ -159,4 +166,9 @@
 }
 .modify-btn:hover {
   background: #1976d2;
-} 
+}
+.modal-rating svg {
+  font-size: 25px;
+  width: 25px;
+  height: 25px;
+}
